# LEVEL3-Data-Intelligence

./: .gitignore  01_ER_Model.ipynb  README.md  databricks.yml  pyproject.toml
app/: clients.py  config.py  endpoints.py  init_app.py  logger.py  old_endpoints.py  runtime.py  secrets.py
client/: base_http_client.py  lufthansa_proxy_client.py
clients/: base_http_client.py  lufthansa_client.py  lufthansa_proxy_client.py
config/: base.yaml  config.py  config_properties.py  dev.yaml  endpoints.py  reference_pipeline.py
jobs/: daily_ingestion.py  ingest_references_daily.ipynb  ingest_references_monthly.ipynb  monthly_ingestion.py  test.py
notebooks/: For presantation.ipynb  main_notebook.ipynb  storage.ipynb
pipelines/: references_pipeline.py
resources/: application-dev.yaml  application.yaml  daily.yml  endpoints.yaml  ingestion_pipeline.yml  jobs.yml  monthly_references.yml  silver_countries.yml  silver_references.yml
resources/jobs/: daily_fetch.yml  daily_operational.yml  daily_operational_workflow.yml  init.yml  monthly_references.yml  operations_gold_job.yml  silver_operations.yml
resources/pipelines/: countries_cdc.yml  gold_presentation_pipeline.yml  ingestion_pipeline.yml  operations_cdc.yml  operations_gold_pipeline.yml  operations_pipeline.yml  references_cdc.yml  references_pipeline.yml
services/: ingestion.py  ingestion_service.py  storage_service.py
src/1_bronze/: daily.py  (+8 more)
util/: json_utils.py  path_utils.py
utils/: config.ipynb  ingestion_utils.ipynb  ingestion_utils.py  landing.py  nets.ipynb  save_utils.ipynb  secrets.ipynb  secrets.py
(+72 files in other folders)
